# PageRank

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.MD  build.py  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  app.py  build.py  cookies.txt  requirements.txt
backend/bindings/: CMakeLists.txt
backend/python/: graph_config.json  pagerank_app.py
backend/python/examples/: test_binding.py
backend/src/: graph.cpp  pagerank.cpp
bindings/: CMakeLists.txt  pagerank_bindings.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  PageRank.css
frontend/src/api/: pagerank.js
lib/: graph.h
python/: graph_config.json  pagerank_app.py
python/examples/: test.py  test_binding.py
src/: CMakeLists.txt  graph.cpp  pagerank.cpp
